--- a/gym_auth/templates/welcome.html
+++ b/gym_auth/templates/welcome.html
@@ -16,6 +16,7 @@
       </ul>
     <a href="exit">exit</a>
     <p><a href="{% url 'register' %}">enter</a></p>
+    <p><a href="{% url 'home' %}">home</a></p>
       
 
 </body>
