--- a/gym_auth/templates/welcome.html
+++ b/gym_auth/templates/welcome.html
@@ -11,7 +11,7 @@
     
     <ul>
         {% for x in mymembers %}
-          <li>{{ x.username }}</li>
+          <li>{{ x.username }} {{ x.timestamp}}</li>
         {% endfor %}
       </ul>
     <a href="exit">exit</a>
