--- a/gym_app/templates/login.html
+++ b/gym_app/templates/login.html
@@ -1,28 +1,28 @@
-<!-- gym_auth/templates/register.html -->
+<!-- gym_app/templates/login.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Register</title>
+    <title>Login</title>
 </head>
 <body>
-    <h2>Enter</h2>
-    <form action="{% url 'register_api' %}" method="post">
+    <h2>Login</h2>
+    <form action="{% url 'login_api' %}" method="post">
         {% csrf_token %}
         <label>
-            Name:
+            Username:
             <input type="text" name="username" required>
         </label>
         <br>
         <label>
-            Roll number:
+            Password:
             <input type="password" name="password" required>
         </label>
         <br>
-        <button type="submit">Enter</button>
+        <button type="submit">Login</button>
     </form>
     <br>
-    
+    <a href="{% url 'register' %}">Register</a>
 </body>
 </html>
