removed html and converted to json ,changed models and urls

--- a/gym_app/templates/main.html
+++ b/gym_app/templates/main.html
@@ -1,13 +1,16 @@
-<!-- gym_app/templates/home.html -->
+<!-- gym_app/templates/main.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>exit</title>
+    <title>FIRST PAGE</title>
     </head>
 <body>
       <p><a href="{% url 'register' %}">enter</a></p>
       <p><a href="{% url 'welcome' %}">view</a></p>
 </body>
 </html>
+
+
+
