added delete_api view which works fine with postman

--- a/gym_app/templates/welcome.html
+++ b/gym_app/templates/welcome.html
@@ -15,7 +15,7 @@
     {% if mymembers %}
         <ul>
             {% for x in mymembers %}
-                <li>{{ x.username }} {{ x.timestamp }}</li>
+                <li>{{ x.username }} {{ x.timestamp }} {{x.id}}</li>
             {% endfor %}
         </ul>
     {% else %}
